--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,36 @@
 <resources>
+
+
+
     <string name="app_name">SdApp</string>
+
+    <!--Generation -->
+    <string name="cancel">Cancel</string>
+    <string name="waitTime">Estimated wait time left: </string>
+    <!--Image Display-->
+    <string name="seedUsed">Seed used: </string>
+    <string name="regenerate">Regenerate</string>
+    <string name="generateNew">Generate New</string>
+    <string name="useInit">Use as Init</string>
+    <string name="download">Download</string>
+
     <string name="title_img2img">Img2Img</string>
     <string name="title_gallery">Gallery</string>
     <string name="title_settings">Settings</string>
+    <string name="prompt">Prompt</string>
+    <string name="promptExample">A dog playing an ukulele</string>
+    <string name="negative">Negative Prompt</string>
+    <string name="negativeExample">A cat playing a guitar</string>
+    <string name="height">Height</string>
+    <string name="width">Width</string>
+    <string name="steps">Generation Steps</string>
+    <string name="seed">Generation Seed</string>
+    <string name="promptStrength">Prompt Strength</string>
+    <string name="imageStrength">Image Strength</string>
+    <string name="apikey">AI Horde Apikey</string>
+    <string name="defaultApikey">0000000000</string>
+    <string name="infoApikey"><u>What\'s this?</u></string>
+    <string name="nsfw">Allow NSFW</string>
+    <string name="censor">Censor NSFW</string>
+    <string name="generate">Generate</string>
 </resources>
