--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="waitTime">Estimated wait time left: </string>
     <!--Image Display-->
     <string name="seedUsed">Seed used: </string>
+    <string name="promptUsed">Prompt used: </string>
     <string name="regenerate">Regenerate</string>
     <string name="generateNew">Generate New</string>
     <string name="useInit">Use as Init</string>
